--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ alembic = "^1.14.0"
 temporalio = "^1.9.0"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.20"
+websockets = "^14.1"
 
 
 [build-system]
