--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ temporalio = "^1.9.0"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.20"
 websockets = "^14.1"
+fastapi-mail = "^1.4.2"
+itsdangerous = "^2.2.0"
 
 
 [build-system]
