--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-multipart = "^0.0.20"
 websockets = "^14.1"
 fastapi-mail = "^1.4.2"
 itsdangerous = "^2.2.0"
+redis = "^5.2.1"
 
 
 [build-system]
