casbin added with source and minio added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ websockets = "^14.1"
 fastapi-mail = "^1.4.2"
 itsdangerous = "^2.2.0"
 redis = "^5.2.1"
+casbin-sqlalchemy-adapter = "^1.4.0"
+minio = "^7.2.15"
+hvac = "^2.3.0"
 
 
 [build-system]
